--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.mt</groupId>
-	<artifactId>maven-web-appli</artifactId>
+	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:3.96.220.87:9000/</sonar.host.url>
+		<sonar.host.url>http://3.96.220.87:9000/</sonar.host.url>
 		<sonar.login>aee87c1441c1a6f12f7d0bfd524421ca98391f0e</sonar.login>
 		<!-- <sonar.password>admin@123</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,19 +97,19 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://35.182.213.104:8081/Alfred/repository/maven-test-release/</url>
+	      <url>http://35.182.213.104:8181/Alfred/repository/maven-test-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://35.182.213.104:8081/Alfred/repository/maven-test-snapshot/</url>
+	      <url>http://35.182.213.104:8181/Alfred/repository/maven-test-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-		<finalName>maven-test</finalName>
+		<finalName>maven-web-ap</finalName>
 		
 		<plugins>
 			<plugin>
