--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.96.220.87:9000/</sonar.host.url>
+		<sonar.host.url>https://sonarqube.babem.dev/</sonar.host.url>
 		<sonar.login>aee87c1441c1a6f12f7d0bfd524421ca98391f0e</sonar.login>
 		<!-- <sonar.password>admin@123</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
