--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://35.182.213.104:8081/Alfred/repository/maven-test-release/</url>
+	      <url>https://nexus.babem.dev/repository/maven-test-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://35.182.213.104:8081/Alfred/repository/maven-test-snapshot/</url>
+	      <url>https://nexus.babem.dev/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
